# delPezzo

./: .gitignore  pyproject.toml
src/delPezzo/: Lubbes_parse.py  __init__.py  combtypes.py  cone.py  contraction.py  cylinder.py  finder.py  parse2surface.py  picard.py  surface.py  surface2.py
src/delPezzo/old_version/: cylinder.py  parse2surface.py
tests/: test_deg4.py  test_finder.py  test_surface.py  test_various.py
